fixed horizontal scrolling in options dropdown

--- a/source/stylesheets/product.css.scss
+++ b/source/stylesheets/product.css.scss
@@ -205,7 +205,7 @@
 .options-list {
   background: #{"{{theme.background_color}}"};
   max-height: 200px;
-  overflow: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
 }
 .options-list li {
